syntax="proto3";
package eos.console;

message StagerRmProto {
  message FileProto {
    oneof File {
      string Path = 1;
      uint64 Fid = 2;
    }
  }

  message StagerRmSingleReplicaProto {
    uint64 fsid = 1;
  }

  repeated FileProto File = 1;
  StagerRmSingleReplicaProto stagerRmSingleReplica = 2;
}
